# squids-fantasy-football-pwnage

./: .gitignore  Invoke-FantasyPredict.ps1  LICENSE  README.md  RELEASE.md  RELEASE_PROCESS.md  USAGE.md  fantasy-predict.bat  pyproject.toml  requirements.txt
scripts/: README.md  build_release.py
src/pwn-fantasy-football/data_fetch/: README.md  __init__.py  example_usage.py  main.py  utils.py
src/pwn-fantasy-football/data_fetch/cfg/: cfg.json
src/pwn_fantasy_football/: __init__.py  cli.py  example_usage.py
src/pwn_fantasy_football/data_fetch/: README.md  data_fetcher.py  example_usage.py
src/pwn_fantasy_football/prediction/: README.md  __init__.py  example_usage.py  fantasy_calculator.py  main.py  predictor.py
src/pwn_fantasy_football/prediction/cfg/: cfg.json
src/tests/: README.md  conftest.py  test_data_fetcher.py  test_main.py  test_utils.py
